fix(select): Fixed z-index of material select

--- a/src/components/entries-form/entries-form.scss
+++ b/src/components/entries-form/entries-form.scss
@@ -18,6 +18,10 @@
   width: 100%;
 }
 
+.entriesCard:first-child {
+  z-index: 2;
+}
+
 .entriesCard:not(:first-child) {
   margin-top: 1rem;
 }
